--- a/src/main/webapp/view/contato/list.html
+++ b/src/main/webapp/view/contato/list.html
@@ -11,7 +11,7 @@
 			</tr>
 		</table></td></tr>
 		<tr><td><div class="scroll" do-scroll="load()"><table width="99%">
-			<tr ng-repeat="contato in contatoList | filter:search | orderBy:'nome'">
+			<tr ng-repeat="contato in list | filter:search | orderBy:'nome'">
 				<td width="100">{{contato.nome}}</td>
 				<td width="200">{{contato.endereco}}</td>
 				<td width="10"><a href="#/contato/edit/{{contato.id}}"><i class="icon-pencil"></i></a></td>
