--- a/src/main/webapp/view/perfil/form.html
+++ b/src/main/webapp/view/perfil/form.html
@@ -2,9 +2,9 @@
 <h2 ng-hide="perfil.id">New Perfil</h2>
 <form name="myForm">
 	<div class="control-group" ng-class="{error: myForm.authority.$invalid}">
-		<label>Nome</label><input type="text" name="authority" ng-model="perfil.perfil.authority" required><span ng-show="myForm.authority.$error.required" class="help-inline">Required</span>
+		<label>Nome</label><input type="text" name="authority" ng-model="model.perfil.authority" required><span ng-show="myForm.authority.$error.required" class="help-inline">Required</span>
 	</div>
 	<br> <a href="#/perfil/" class="btn">Cancel</a>
 	<button ng-click="save()" ng-disabled="isClean() || myForm.$invalid" class="btn btn-primary">Save</button>
-	<button ng-click="destroy()" ng-show="perfil.perfil.id" class="btn btn-danger">Delete</button>
+	<button ng-click="destroy()" ng-show="model.perfil.id" class="btn btn-danger">Delete</button>
 </form>
