--- a/src/main/webapp/view/perfil/list.html
+++ b/src/main/webapp/view/perfil/list.html
@@ -10,7 +10,7 @@
 			</tr>
 		</table></td></tr>
 		<tr><td><div class="scroll" do-scroll="load()"><table width="99%">
-			<tr ng-repeat="perfil in perfilList | filter:search | orderBy:'authority'">
+			<tr ng-repeat="perfil in list | filter:search | orderBy:'authority'">
 				<td width="100">{{perfil.authority}}</td>
 				<td width="10"><a href="#/perfil/edit/{{perfil.id}}"><i class="icon-pencil"></i></a></td>
 			</tr>
