--- a/src/main/webapp/view/tarefa/form.html
+++ b/src/main/webapp/view/tarefa/form.html
@@ -1,18 +1,18 @@
-<h2 ng-show="tarefa.id">Edit Tarefa</h2>
-<h2 ng-hide="tarefa.id">New Tarefa</h2>
+<h2 ng-show="model.tarefa.id">Edit Tarefa</h2>
+<h2 ng-hide="model.tarefa.id">New Tarefa</h2>
 <form name="myForm">
 	<div class="control-group" ng-class="{error: myForm.nome.$invalid}">
-		<label>Nome</label><input type="text" name="nome" ng-model="tarefa.nome" required><span ng-show="myForm.authority.$error.required" class="help-inline">Required</span>
+		<label>Nome</label><input type="text" name="nome" ng-model="model.tarefa.nome" required><span ng-show="myForm.authority.$error.required" class="help-inline">Required</span>
 	</div>
 	<div class="control-group" ng-class="{error: myForm.nome.$invalid}">
-		<label>Data Execução</label><input type="text" name="dataExecucao" ui-date ui-date-format="yy-mm-dd" ng-model="tarefa.dataExecucao" required><span ng-show="myForm.dataExecucao.$error.required" class="help-inline">Required</span>
+		<label>Data Execução</label><input type="text" name="dataExecucao" ui-date ui-date-format="yy-mm-dd" ng-model="model.tarefa.dataExecucao" required><span ng-show="myForm.dataExecucao.$error.required" class="help-inline">Required</span>
 	</div>
 	<div class="control-group" ng-class="{error: myForm.nome.$invalid}">
 		<label>Usuario</label>
-		<select id="usuarios" ng-model="tarefa.usuario" ng-options="u.username for u in usuarios" required></select>
+		<select id="usuarios" ng-model="model.tarefa.usuario" ng-options="u.username for u in usuarios" required></select>
 		<span ng-show="myForm.usuario.$error.required" class="help-inline">Required</span>
 	</div>
 	<br> <a href="#/tarefa/" class="btn">Cancel</a>
 	<button ng-click="save()" ng-disabled="isClean() || myForm.$invalid" class="btn btn-primary">Save</button>
-	<button ng-click="destroy()" ng-show="tarefa.id" class="btn btn-danger">Delete</button>
+	<button ng-click="destroy()" ng-show="model.tarefa.id" class="btn btn-danger">Delete</button>
 </form>
