--- a/src/main/webapp/view/tarefa/list.html
+++ b/src/main/webapp/view/tarefa/list.html
@@ -10,7 +10,7 @@
 			</tr>
 		</table></td></tr>
 		<tr><td><div class="scroll" do-scroll="load()"><table width="99%">
-			<tr ng-repeat="tarefa in tarefaList | filter:search | orderBy:'nome'">
+			<tr ng-repeat="tarefa in list | filter:search | orderBy:'nome'">
 				<td width="100">{{tarefa.nome}}</td>
 				<td width="10"><a href="#/tarefa/edit/{{tarefa.id}}"><i class="icon-pencil"></i></a></td>
 			</tr>
