--- a/src/main/webapp/view/index.html
+++ b/src/main/webapp/view/index.html
@@ -1,3 +1,5 @@
-<center>Principal</center>
+<p>{{"DEVELOPER_NAME" | i18n:"Thiago Roberto Gaspar Pinto"}} (<a target="_blank" href="https://github.com/trgpwild">github</a>)</p>
+
+<hr/>
 
 <ul><li ng-repeat="contato in contatos">{{contato.nome}}</li></ul>
