--- a/src/main/webapp/view/contato/list.html
+++ b/src/main/webapp/view/contato/list.html
@@ -1,12 +1,12 @@
 <div class="row">
-	<h2>Contatos</h2>
-	<input type="text" ng-model="search" class="search-query" placeholder="Search">
+	<h2>{{'CONTACTS'|i18n}}</h2>
+	<input type="text" ng-model="search" class="search-query" placeholder="{{'SEARCH'|i18n}}">
 	<p>&nbsp;</p>
 	<table width="100%" class="table table-striped table-bordered table-condensed">
 		<tr><td><table width="98%">
 			<tr>
-				<th width="100">Nome</th>
-				<th width="200">Endereco</th>
+				<th width="100">{{'contato.nome'|i18n}}</th>
+				<th width="200">{{'contato.endereco'|i18n}}</th>
 				<th width="10"><a href="#/contato/new"><i class="icon-plus-sign"></i></a></th>
 			</tr>
 		</table></td></tr>
