--- a/src/main/webapp/view/tarefa/list.html
+++ b/src/main/webapp/view/tarefa/list.html
@@ -1,11 +1,11 @@
 <div class="row">
-	<h2>Tarefas</h2>
-	<input type="text" ng-model="search" class="search-query" placeholder="Search">
+	<h2>{{'TASKS'|i18n}}</h2>
+	<input type="text" ng-model="search" class="search-query" placeholder="{{'SEARCH'|i18n}}">
 	<p>&nbsp;</p>
 	<table width="100%" class="table table-striped table-bordered table-condensed">
 		<tr><td><table width="98%">
 			<tr>
-				<th width="100">Nome</th>
+				<th width="100">{{'tarefa.nome'|i18n}}</th>
 				<th width="10"><a href="#/tarefa/new"><i class="icon-plus-sign"></i></a></th>
 			</tr>
 		</table></td></tr>
