--- a/src/main/webapp/view/usuario/form.html
+++ b/src/main/webapp/view/usuario/form.html
@@ -1,43 +1,43 @@
-<h2 ng-show="model.usuario.id">Edit Usuario</h2>
-<h2 ng-hide="model.usuario.id">New Usuario</h2>
+<h2 ng-show="model.usuario.id">{{'EDIT_USER'|i18n}}</h2>
+<h2 ng-hide="model.usuario.id">{{'NEW_USER'|i18n}}</h2>
 <form name="myForm">
 	<table>
 		<tr>
 			<td valign="top">
 				<div class="control-group" ng-class="{error: myForm.authority.$invalid}">
-					<label>Username</label><input type="text" name="username" ng-model="model.usuario.username" required><span ng-show="myForm.username.$error.required" class="help-inline">Required</span>
+					<label>{{'usuario.username'|i18n}}</label><input type="text" name="username" ng-model="model.usuario.username" required><span ng-show="myForm.username.$error.required" class="help-inline">{{'REQUIRED'|i18n}}</span>
 				</div>
 				<div class="control-group" ng-class="{error: myForm.authority.$invalid}">
-					<label>Password</label><input type="password" name="password" ng-model="model.usuario.password" required><span ng-show="myForm.password.$error.required" class="help-inline">Required</span>
+					<label>{{'usuario.password'|i18n}}</label><input type="password" name="password" ng-model="model.usuario.password" required><span ng-show="myForm.password.$error.required" class="help-inline">{{'REQUIRED'|i18n}}</span>
 				</div>
 				<div class="control-group" ng-class="{error: myForm.perfis.$invalid}">
 					<select id="perfis" multiple ng-multiple="true" ng-model="model.usuario.perfis" ng-options="a.authority for a in roles" required></select>
-					<span ng-show="myForm.perfis.$error.required" class="help-inline">Required</span>
+					<span ng-show="myForm.perfis.$error.required" class="help-inline">{{'REQUIRED'|i18n}}</span>
 				</div>
 			</td>
 			<td valign="top">
 				<div class="control-group" ng-class="{error: myForm.email.$invalid}">
-					<label>Email</label>
+					<label>{{'usuario.email'|i18n}}</label>
 					<input type="email" name="email" ng-model="model.usuario.email" required>
-					<span ng-show="myForm.email.$error.required" class="help-inline">Required</span>
-					<span ng-show="myForm.email.$error.email" class="help-inline">This is not a valid email</span>
+					<span ng-show="myForm.email.$error.required" class="help-inline">{{'REQUIRED'|i18n}}</span>
+					<span ng-show="myForm.email.$error.email" class="help-inline">{{'INVALID_EMAIL'|i18n}}</span>
 				</div>
 				<div class="control-group" ng-class="{error: myForm.tries.$invalid}">
-					<label>Tries</label>
+					<label>{{'usuario.tries'|i18n}}</label>
 					<input type="number" name="tries" ng-model="model.usuario.tries" min="0" max="3" required integer>
-					<span ng-show="myForm.tries.$error.required" class="help-inline">Required</span>
-					<span ng-show="myForm.tries.$error.integer" class="help-inline">This is not valid number for Tries!</span>
-					<span ng-show="myForm.tries.$error.min || myForm.tries.$error.max" class="help-inline">The value must be in range 0 to 3!</span>
+					<span ng-show="myForm.tries.$error.required" class="help-inline">{{'REQUIRED'|i18n}}</span>
+					<span ng-show="myForm.tries.$error.integer" class="help-inline">{{'INVALID_NUMBER_TRIES'|i18n}}</span>
+					<span ng-show="myForm.tries.$error.min || myForm.tries.$error.max" class="help-inline">{{'RANGE_0_3'|i18n}}</span>
 				</div>
 				<div class="control-group" ng-class="{error: myForm.ativo.$invalid}">
-					<label>Ativo</label>
+					<label>{{'usuario.active'|i18n}}</label>
 					<input type="checkbox" name="ativo" ng-model="model.usuario.ativo" required>
-					<span ng-show="myForm.ativo.$error.required" class="help-inline">Required</span>
+					<span ng-show="myForm.ativo.$error.required" class="help-inline">{{'REQUIRED'|i18n}}</span>
 				</div>
 			</td>
 		</tr>
 	</table>
-	<br> <a href="#/usuario/" class="btn">Cancel</a>
-	<button ng-click="save()" ng-disabled="isClean() || myForm.$invalid" class="btn btn-primary">Save</button>
-	<button ng-click="destroy()" ng-show="model.usuario.id" class="btn btn-danger">Delete</button>
+	<br> <a href="#/usuario/" class="btn">{{'CANCEL'|i18n}}</a>
+	<button ng-click="save()" ng-disabled="isClean() || myForm.$invalid" class="btn btn-primary">{{'SAVE'|i18n}}</button>
+	<button ng-click="destroy()" ng-show="model.usuario.id" class="btn btn-danger">{{'DELETE'|i18n}}</button>
 </form>
