--- a/src/main/webapp/view/usuario/list.html
+++ b/src/main/webapp/view/usuario/list.html
@@ -1,12 +1,12 @@
 <div class="row">
-	<h2>Usuarios</h2>
-	<input type="text" ng-model="search" class="search-query" placeholder="Search">
+	<h2>{{'USERS'|i18n}}</h2>
+	<input type="text" ng-model="search" class="search-query" placeholder="{{'SEARCH'|i18n}}">
 	<p>&nbsp;</p>
 	<table width="100%" class="table table-striped table-bordered table-condensed">
 		<tr><td><table width="98%">
 			<tr>
-				<th>Username</th>
-				<th>Email</th>
+				<th>{{'usuario.username'|i18n}}</th>
+				<th>{{'usuario.email'|i18n}}</th>
 				<th width="10"><a href="#/usuario/new"><i class="icon-plus-sign"></i></a></th>
 			</tr>
 		</table></td></tr>
