--- a/src/main/webapp/view/usuario/list.html
+++ b/src/main/webapp/view/usuario/list.html
@@ -5,14 +5,14 @@
 	<table width="100%" class="table table-striped table-bordered table-condensed">
 		<tr><td><table width="98%">
 			<tr>
-				<th>{{'usuario.username'|i18n}}</th>
+				<th width="200">{{'usuario.username'|i18n}}</th>
 				<th>{{'usuario.email'|i18n}}</th>
 				<th width="10"><a href="#/usuario/new"><i class="icon-plus-sign"></i></a></th>
 			</tr>
 		</table></td></tr>
 		<tr><td><div class="scroll" do-scroll="load()"><table width="99%">
 			<tr ng-repeat="usuario in list | filter:search | orderBy:'username'">
-				<td>{{usuario.username}}</td>
+				<td width="200">{{usuario.username}}</td>
 				<td>{{usuario.email}}</td>
 				<td width="10"><a href="#/usuario/edit/{{usuario.id}}"><i class="icon-pencil"></i></a></td>
 			</tr>
