Update with ideal i18n lib

--- a/src/main/webapp/view/index.html
+++ b/src/main/webapp/view/index.html
@@ -1,5 +1,3 @@
-<p>{{"DEVELOPER_NAME" | i18n:"Thiago Roberto Gaspar Pinto"}} (<a target="_blank" href="https://github.com/trgpwild">github</a>)</p>
-
+<div data-i18n="DEVELOPER_NAME|Thiago Roberto Gaspar Pinto|(https://github.com/trgpwild)"></div>
 <hr/>
-
 <ul><li ng-repeat="contato in contatos">{{contato.nome}}</li></ul>
